services/tinyfilemanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyfilemanager
  namespace: nine
  labels:
    app.kubernetes.io/name: tinyfilemanager
    app.kubernetes.io/part-of: ninekube
spec:
  selector:
    app.kubernetes.io/name: tinyfilemanager
  ports:
    - name: http
      port: 80
      targetPort: http
