services/tinyfilemanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyfilemanager
  namespace: nine
  labels:
    app.kubernetes.io/name: tinyfilemanager
    app.kubernetes.io/part-of: ninekube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.nine.local
      secretName: tinyfilemanager-tls
  rules:
    - host: files.nine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinyfilemanager
                port:
                  number: 80
